--- a/styles/globals.css
+++ b/styles/globals.css
@@ -183,7 +183,7 @@ font-size: 20px;
 gap:10px;
 display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   min-width: 200px;
   border-radius: 5px;
   padding: 5px 10px;
